--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>Multiple Inc Test by Andre Ehrlich</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="script.js"></script>
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
 </head>
 <body>
 
@@ -17,8 +20,8 @@
         <li>ANOTHER ITEM</li>
       </ul>
 
-      <div id="menu-close">
-        <a onclick="hide('menu')" >Exit</a>
+      <div class="button-close">
+        <a onclick="hide('menu')" ><i class="icon fas fa-times fa-lg"></i></a>
       </div>
 
     </div>
@@ -28,26 +31,26 @@
   <div class="hero flex-column">
 
     <div class="header flex-row">
-      <div class="logo">Logo</div>
-      <div class="title">Title</div>
-      <a id="menu-open" onclick="show('menu')">Menu</a>
+      <div id="logo">Logo</div>
+      <div id="title">Title</div>
+      <a id="menu-open" onclick="show('menu')"><i class="icon fas fa-bars"></i></a>
     </div>
 
-    <div class="headline">
+    <div id="headline">
       HEADLINE WHICH MAY HAVE MULTIPLE LINES
     </div>
 
-    <a class="description-show" onclick="show('description-cover')">Read + More</a>
+    <a class="description-show" onclick="show('description-cover')">Read <i class="icon fas fa-plus fa-lg"></i> More</a>
 
   </div>
 
 
   <!-- description -->
   <div id="description">
-    <div class="info">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div id="description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+    <div class="button-close">
+      <a onclick="hide('description-cover')"><i class="icon fas fa-times fa-lg"></i></a>
     </div>
-    <a onclick="hide('description-cover')" class="menu-close">Exit</a>
   </div>
 
   <div id="description-cover"></div>
